--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -67,15 +67,15 @@ OBJECTS = $(SOURCES:.cpp=.o)
 all : copy_userapp
 
 copy_userapp : $(TARGET) $(HELLO) $(SHELL_SERVER) $(KEYBOARD_SERVER) $(JPEG_DEMO) $(MAP_SERVER) $(MOUSE_SERVER) $(NOIZ2BG) $(CLOCK) $(OTHELLO)
-	(cd $(BIN); $(FAT_TOOL) mona.img HELLO.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img SHELL.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img KEYBDMNG.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img JPEGDEMO.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img MAP.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img MOUSE.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img NOIZ2BG.ELF)
-#	(cd $(BIN); $(FAT_TOOL) mona.img CLOCK.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img OTHELLO.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img SERVER/SHELL.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img SERVER/KEYBDMNG.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img SERVER/MAP.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img SERVER/MOUSE.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img APP/HELLO.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img APP/JPEGDEMO.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img APP/NOIZ2BG.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img APP/CLOCK.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img APP/OTHELLO.ELF)
 
 $(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL) userapp
 	cat $(BOOT2) $(KERNEL) > $(KERNEL_IMG)
