--- a/mona_v1.0/src/user/userlib/Makefile
+++ b/mona_v1.0/src/user/userlib/Makefile
@@ -4,20 +4,21 @@ LIB_USER        = ../lib/libuser.a
 SOURCES         = string.cpp        \
                   userlib.cpp       \
                   MemoryManager.cpp \
+                  monalibc.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
 all : $(LIB_USER)
 
-$(LIB_USER) : userlib.o string.o MemoryManager.o
-	ar cvr $(LIB_USER) userlib.o string.o MemoryManager.o
+$(LIB_USER) : userlib.o string.o MemoryManager.o monalibc.o
+	ar cvr $(LIB_USER) userlib.o string.o MemoryManager.o monalibc.o
 
 .SUFFIXES: .cpp .o
 .cpp.o:
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c $<
 
 clean :
-	rm -f $(LIB_USER) userlib.o string.o MemoryManager.o
+	rm -f $(LIB_USER) userlib.o string.o MemoryManager.o monalibc.o
 
 depend:
 	$(CC) -MM $(CFINCLUDE) $(CFLAGS) $(SOURCES) > dependencies
