--- a/mona_v1.0/src/user/KeyBoardServer/Makefile
+++ b/mona_v1.0/src/user/KeyBoardServer/Makefile
@@ -16,10 +16,10 @@ $(APP) : $(LIB_USER) $(OBJ) KeyBoardManager.o
 	$(STRIP) $(APP)
 
 $(OBJ) : KeyBoardServer.cpp
-	$(CC) $(CFLAGS) $(CFINCLUDE) -c KeyBoardServer.cpp
+	$(CXX) $(CFLAGS) $(CFINCLUDE) -c KeyBoardServer.cpp
 
 KeyBoardManager.o : KeyBoardManager.cpp KeyBoardManager.h
-	$(CC) $(CFLAGS) $(CFINCLUDE) -c KeyBoardManager.cpp
+	$(CXX) $(CFLAGS) $(CFINCLUDE) -c KeyBoardManager.cpp
 
 clean :
 	rm -f $(OBJ) KeyBoardManager.o $(APP)
