--- a/mona_v1.0/src/env/djgpp.env
+++ b/mona_v1.0/src/env/djgpp.env
@@ -1,6 +1,6 @@
 NASM       = nasmw
 NDISASM    = ndisasmw
-CC         = ${DJGPP_HOME_H}/bin/gpp
+CXX         = ${DJGPP_HOME_H}/bin/gpp
 LD         = ${DJGPP_HOME_H}/bin/ld
 STRIP      = ${DJGPP_HOME_H}/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
