--- a/mona_v1.0/src/env/linux3.x.env
+++ b/mona_v1.0/src/env/linux3.x.env
@@ -1,6 +1,6 @@
 NASM       = nasm
 NDISASM    = ndisasm
-CC         = g++
+CXX         = g++
 LD         = ld
 STRIP      = strip
 CONTRIB_LIB= ./contrib/lib_linux
