--- a/mona_v1.0/src/user/noiz2bg/Makefile
+++ b/mona_v1.0/src/user/noiz2bg/Makefile
@@ -16,7 +16,7 @@ $(APP) : $(LIB_USER) $(OBJ)
 	$(STRIP) $(APP)
 
 $(OBJ) : noiz2bg.cpp
-	$(CXX) $(CFLAGS) $(CFINCLUDE) -c noiz2bg.cpp
+	$(CXX) $(CXXFLAGS) $(CFINCLUDE) -c noiz2bg.cpp
 
 clean :
 	rm -f $(OBJ) $(APP)
