--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -6,7 +6,7 @@ STRIP      = /usr/bin/strip
 CONTRIB_LIB= ./contrib/lib_cygwin
 LFLAGS     = -n -Ttext 0x1200 -static
 # for gcc3.x@cygwin
-CXXFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3
+CXXFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall
 ENV             = env
 VERSION         = 0.1.1
 DOXYGEN         = doxygen
