--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -50,15 +50,15 @@ OBJECTS = $(SOURCES:.cpp=.o)
 all : copy_userapp
 
 copy_userapp : $(TARGET) $(USER_APP)
-	(cd $(BIN); $(FAT_TOOL) mona.img SHELL.SVR    \\SERVER\\SHELL.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img KEYBDMNG.SVR \\SERVER\\KEYBDMNG.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img MAP.SVR      \\SERVER\\MAP.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img MOUSE.SVR    \\SERVER\\MOUSE.SVR)
-	(cd $(BIN); $(FAT_TOOL) mona.img HELLO.ELF    \\APP\\HELLO.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img JPEGDEMO.ELF \\APP\\JPEGDEMO.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img NOIZ2BG.ELF  \\APP\\NOIZ2BG.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img CLOCK.ELF    \\APP\\CLOCK.ELF)
-	(cd $(BIN); $(FAT_TOOL) mona.img REVERSI.ELF  \\APP\\REVERSI.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img SHELL.SVR    /SERVER/SHELL.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img KEYBDMNG.SVR /SERVER/KEYBDMNG.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img MAP.SVR      /SERVER/MAP.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img MOUSE.SVR    /SERVER/MOUSE.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img HELLO.ELF    /APP/HELLO.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img JPEGDEMO.ELF /APP/JPEGDEMO.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img NOIZ2BG.ELF  /APP/NOIZ2BG.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img CLOCK.ELF    /APP/CLOCK.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img REVERSI.ELF  /APP/REVERSI.ELF)
 
 $(USER_APP) :
 	(cd user; make)
@@ -66,7 +66,7 @@ $(USER_APP) :
 $(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL) userapp
 	cat $(BOOT2) $(KERNEL) > $(KERNEL_IMG)
 	(cat $(BOOT1);dd if=$(TEMPLATE) bs=512 skip=1 ) > $(TARGET)
-	(cd $(BIN); $(FAT_TOOL) mona.img KERNEL.IMG \\KERNEL.IMG)
+	(cd $(BIN); $(FAT_TOOL) mona.img KERNEL.IMG /KERNEL.IMG)
 
 $(FAT_TOOL) :
 	(cd ../tools/fat_write; make)
