new load process

--- a/mona_v1.0/src/user/ShellServer/Makefile
+++ b/mona_v1.0/src/user/ShellServer/Makefile
@@ -1,9 +1,9 @@
 include ../Makefile.inc
 BIN             = ../../../bin
 CFINCLUDE       = -I. -I../include -I../include/userlib -I../../share
-LIB             = -L../lib
+LIB             = -L../lib -luser
 LIB_USER        = ../lib/libuser.a
-LFLAGS          = -n -Ttext 0xA0000000 -e _user_start -static -luser
+LFLAGS          = -n -Ttext 0xA0000000 -e _user_start -static
 OFLAGS          = --output-target=elf32-i386
 APP             = $(BIN)/SHELL.SVR
 OBJ             = ShellServer.o
@@ -11,7 +11,7 @@ OBJ             = ShellServer.o
 all : $(APP)
 
 $(APP) : $(LIB_USER) $(OBJ) KeyBoardManager.o
-	$(LD) --Map app.map $(LFLAGS) $(OBJ) KeyBoardManager.o $(LIB) -o $(APP)
+	$(LD) --Map app.map $(LFLAGS) $(OBJ) KeyBoardManager.o  $(LIB) -o $(APP)
 	objcopy $(OFLAGS) $(APP)
 	$(STRIP) $(APP)
 
