--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -53,6 +53,7 @@ SOURCES      = cstart.cpp            \
                Mutex.cpp             \
                VesaConsole.cpp       \
                LogConsole.cpp        \
+               fat.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
