--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -53,7 +53,8 @@ SOURCES      = cstart.cpp            \
                Mutex.cpp             \
                VesaConsole.cpp       \
                LogConsole.cpp        \
-               fat.cpp
+               fat.cpp               \
+               fs.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
