--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -44,7 +44,8 @@ SOURCES      = cstart.cpp            \
                Mutex.cpp             \
                VesaConsole.cpp       \
                LogConsole.cpp        \
-               fat.cpp
+               fat.cpp               \
+               fs.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
