--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -44,7 +44,9 @@ SOURCES      = cstart.cpp            \
                VesaConsole.cpp       \
                LogConsole.cpp        \
                fat.cpp               \
-               fs.cpp
+               fs.cpp                \
+               IDManager.cpp         \
+               KObject.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
