--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -71,6 +71,7 @@ copy_userapp : $(TARGET) $(USER_APP)
 	(cd $(BIN); $(FAT_TOOL) mona.img NOIZ2BG.ELF  APP/NOIZ2BG.ELF)
 	(cd $(BIN); $(FAT_TOOL) mona.img CLOCK.ELF    APP/CLOCK.ELF)
 	(cd $(BIN); $(FAT_TOOL) mona.img REVERSI.ELF  APP/REVERSI.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img GETMAC.ELF   APP/GETMAC.ELF)
 	(cd $(BIN); $(FAT_TOOL) mona.img AUTOEXEC.MSH AUTOEXEC.MSH)
 	(cd $(BIN); $(FAT_TOOL) mona.img MONA.CFG     MONA.CFG)
 
