--- a/mona_v1.0/src/env/djgpp.env
+++ b/mona_v1.0/src/env/djgpp.env
@@ -1,6 +1,7 @@
 NASM       = nasmw
 NDISASM    = ndisasmw
-CXX         = ${DJGPP_HOME_H}/bin/gpp
+CXX        = ${DJGPP_HOME_H}/bin/gpp
+MAKE       = make
 LD         = ${DJGPP_HOME_H}/bin/ld
 STRIP      = ${DJGPP_HOME_H}/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
