--- a/mona_v1.0/src/env/linux2.x.env
+++ b/mona_v1.0/src/env/linux2.x.env
@@ -1,6 +1,7 @@
 NASM       = nasm
 NDISASM    = ndisasm
-CXX         = g++
+CXX        = g++
+MAKE       = make
 LD         = ld
 STRIP      = strip
 CONTRIB_LIB= ./contrib/lib_linux
