--- a/mona_v1.0/src/user/NIC/Makefile
+++ b/mona_v1.0/src/user/NIC/Makefile
@@ -3,7 +3,7 @@ include ../Makefile.inc
 all : nic_ne2k
 
 nic_ne2k :
-	(cd ne2k; make)
+	(cd ne2k; $(MAKE))
 
 clean :
-	(cd ne2k; make clean)
+	(cd ne2k; $(MAKE) clean)
