--- a/mona_v1.0/src/user/waba/Makefile
+++ b/mona_v1.0/src/user/waba/Makefile
@@ -11,7 +11,7 @@ OBJ             = waba.o
 all : $(APP)
 
 $(APP) : $(LIB_USER) $(OBJ)
-	$(LD) $(LFLAGS) $(OBJ) $(LIB) -o $(APP)
+	$(LD)  $(LIB)  $(OBJ) $(LFLAGS) -o $(APP)
 	objcopy $(OFLAGS) $(APP)
 	$(STRIP) $(APP)
 
