--- a/mona_v1.0/src/user/userlib/Makefile
+++ b/mona_v1.0/src/user/userlib/Makefile
@@ -8,7 +8,8 @@ SOURCES         = string.cpp        \
                   MlcCtype.cpp      \
                   MlcStdlib.cpp     \
                   MlcStdio.cpp      \
-                  MlcStdarg.cpp
+                  MlcStdarg.cpp     \
+                  mt19937ar.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
