--- a/Mona/apps/gui/Makefile
+++ b/Mona/apps/gui/Makefile
@@ -1,11 +1,15 @@
 all:
 	@cd reversi; $(MAKE) $@
+	@cd ps; $(MAKE) $@
 
 install:
 	@cd reversi; $(MAKE) $@
+	@cd ps; $(MAKE) $@
 
 clean:
 	@cd reversi; $(MAKE) $@
+	@cd ps; $(MAKE) $@
 
 depend:
 	@cd reversi; $(MAKE) $@
+	@cd ps; $(MAKE) $@
