--- a/Mona/src/lib/Makefile
+++ b/Mona/src/lib/Makefile
@@ -9,7 +9,7 @@ clean:
 	@cd monapi; $(MAKE) $@
 	@cd monalibc; $(MAKE) $@
 	@cd gui; $(MAKE) $@
-	rm -f ../../lib/*
+	rm -f ../../lib/*.a
 
 depend:
 	@cd monapi; $(MAKE) $@
