--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -6,4 +6,4 @@ STRIP      = strip
 AR         = ar cvru
 RANLIB     = ranlib
 # for gcc3.x@cygwin
-CXXFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3
+CXXFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DDEBUG_BUILD
