--- a/Mona/src/servers/1linesh/Makefile
+++ b/Mona/src/servers/1linesh/Makefile
@@ -4,8 +4,8 @@ SOURCES         = main.cpp          \
                   Command.cpp       \
                   DisplayWindow.cpp \
                   Charing.cpp       \
-                  KeyBoardManager.cpp \
                   CommandHistory.cpp       \
+#                  KeyBoardManager.cpp \
 
 
 MONADIR = ../../..
