--- a/Mona/src/servers/Makefile
+++ b/Mona/src/servers/Makefile
@@ -3,21 +3,26 @@ all:
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd 1linesh; $(MAKE) $@
 
 install:
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd 1linesh; $(MAKE) $@
 
 clean:
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd 1linesh; $(MAKE) $@
 
 depend:
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd 1linesh; $(MAKE) $@
+
