Mona GUI bug fix

--- a/Mona/samples/gui/button/Makefile
+++ b/Mona/samples/gui/button/Makefile
@@ -7,6 +7,8 @@ include $(MONADIR)/env/monapi.inc
 INCLUDE = -I$(INCDIR)
 LINK    = -lgui -lmonapi -lmonalibc
 
+CXXFLAGS += -DDEBUG -DMONA
+
 all: $(TARGET)
 
 $(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmonalibc.a
