Modified Files: 	Mona/include/gui/System/Array.h 	Mona/include/gui/System/Drawing/Bitmap.h 	Mona/include/gui/System/Drawing/Graphics.h 	Mona/src/lib/gui/System/Drawing/Bitmap.cpp 	Mona/src/lib/gui/System/Drawing/Graphics.cpp

--- a/Mona/samples/gui/Makefile
+++ b/Mona/samples/gui/Makefile
@@ -1,15 +1,19 @@
 all:
 	@cd button; $(MAKE) $@
 	@cd label; $(MAKE) $@
+	@cd bitmap; $(MAKE) $@
 
 install:
 	@cd button; $(MAKE) $@
 	@cd label; $(MAKE) $@
+	@cd bitmap; $(MAKE) $@
 
 clean:
 	@cd button; $(MAKE) $@
 	@cd label; $(MAKE) $@
+	@cd bitmap; $(MAKE) $@
 
 depend:
 	@cd button; $(MAKE) $@
 	@cd label; $(MAKE) $@
+	@cd bitmap; $(MAKE) $@
