Modified Files: 	cygwin.env djgpp.env linux2.x.env linux3.x.env mingw.env

--- a/Mona/env/djgpp.env
+++ b/Mona/env/djgpp.env
@@ -1,9 +1,10 @@
-NASM       = nasmw
-NDISASM    = ndisasmw
-CXX        = ${DJGPP_HOME_H}/bin/gpp
-MAKE       = make
-LD         = ${DJGPP_HOME_H}/bin/ld
-STRIP      = ${DJGPP_HOME_H}/bin/strip
-AR         = ${DJGPP_HOME_H}/bin/ar cvru
-RANLIB     = ${DJGPP_HOME_H}/bin/ranlib
-CXXFLAGS   = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3
+NASM     = nasmw
+NDISASM  = ndisasmw
+CXX      = ${DJGPP_HOME_H}/bin/gpp
+MAKE     = make
+LD       = ${DJGPP_HOME_H}/bin/ld
+STRIP    = ${DJGPP_HOME_H}/bin/strip
+AR       = ${DJGPP_HOME_H}/bin/ar cvru
+RANLIB   = ${DJGPP_HOME_H}/bin/ranlib
+CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3
+EXEEXT   = .exe
