--- a/Mona/env/linux3.x.env
+++ b/Mona/env/linux3.x.env
@@ -1,9 +1,10 @@
-NASM       = nasm
-NDISASM    = ndisasm
-CXX        = g++
-LD         = ld
-STRIP      = strip
-AR         = ar cvru
-RANLIB     = ranlib
-CXXFLAGS     = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3
-NFLAGS     = -DBUILD_ON_LINUX
+NASM     = nasm
+NDISASM  = ndisasm
+CXX      = g++
+LD       = ld
+STRIP    = strip
+AR       = ar cvru
+RANLIB   = ranlib
+CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3
+NFLAGS   = -DBUILD_ON_LINUX
+EXEEXT   = 
