--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -1,9 +1,9 @@
-NASM       = nasm
-NDISASM    = ndisasm
-CXX        = g++
-LD         = ld
-STRIP      = strip
-AR         = ar cvru
-RANLIB     = ranlib
-# for gcc3.x@cygwin
-CXXFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3
+NASM     = nasm
+NDISASM  = ndisasm
+CXX      = g++
+LD       = ld
+STRIP    = strip
+AR       = ar cvru
+RANLIB   = ranlib
+CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3
+EXEEXT   = .exe
